Fix: resolve swagger autogen error
